# apple-in-github-action

./: CMakeLists.txt  Main.qml  main.cpp
.github/workflows/: build.yml
